kubernetes/addons/gitops/argocd/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://argocd.default.internal.javiersant.com"
    gethomepage.dev/description: ArgoCD Dashboard
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: argocd.svg
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/weight: 495
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: argocd-server
          port: 80
  tls:
    secretName: wildcard-javiersant-com-tls
